--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.0.8
   awesome_dialog: ^2.1.2
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
