--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.0.8
   awesome_dialog: ^2.1.2
   cached_network_image: ^3.2.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
